--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ a:hover{
 .cover-heading { 
     font-family: 'Playfair Display';
     font-weight: bold;
-    font-size: 4em;
+    font-size: 3.5em;
     padding: 0.2em;
     max-width: 36em;
     color: rgb(49, 5, 5);
@@ -88,6 +88,8 @@ a:hover{
 .whitecontainer {
     background-color: rgba(255, 255, 255, 0.75);
     border-radius: 25px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 /** Typewriter **/
